1. fix bug in pagination in tracker capture 2. remove dhis prefix from url of tracker capture 3. remove mobile version in login page.

--- a/dhis-2/dhis-web/dhis-web-apps/pom.xml
+++ b/dhis-2/dhis-web/dhis-web-apps/pom.xml
@@ -122,7 +122,7 @@
                   <artifactId>dhis-app-tracker-capture</artifactId>
                   <version>2.27-SNAPSHOT</version>
                   <overWrite>true</overWrite>
-                  <outputDirectory>${project.build.directory}/${project.artifactId}/dhis-web-tracker-capture</outputDirectory>
+                  <outputDirectory>${project.build.directory}/${project.artifactId}/web-tracker-capture</outputDirectory>
                   <includes>**/*.*</includes>
                 </artifactItem>
                 <!-- Visualizer -->
